2004-11-24  Vincent Noel  <vnoel@cox.net>

	* userprefs.c: parse_syslog is back from the dead. My mistake,
	this function was actually useful.
	(prefs_create_defaults): Use parse_syslog to look for logs.

2004-11-23  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menu_item_set_state): Use
	gtk_action_set_sensitive instead of
	gtk_widget_set_sensitive. Remove now-useless prevention against
	keyboard activation.

	* log_repaint.c (handle_row_activation_cb): Use gtk_action_activate.
	* calendar.c (close_calendar): Same thing.
	* zoom.c (close_zoom_view): Same thing.
	* logview.c (CloseLogMenu): Same thing.

2004-11-18  Vincent Noel  <vnoel@cox.net>

	* monitor.c (mon_update_display): Use bold markup to show changes
	in a monitored log instead of selecting the changed lines.

	* zoom.c: Simplify a lot. Use labels and markup in zoom dialog.

	* info.c (LogInfo): Simplify a lot. Use markup in properties dialog.
	(LogInfo): Make the label text selectable.

	* logview.c (logview_create_monitor_widget): Move it here. Remove
	useless calls.
	(LoadLogMenu): Don't set the size of the filechooser. Don't change
	the directory to the preset every time we show the filechooser.
	(logview_help): Remove unused variable.

	* monitor.c (monitor_stop): Little refactoring.

2004-11-16  Vincent Noel  <vnoel@cox.net>

	* logview.c (save_session): Use g_get_prgname for restoring session.

2004-11-09  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_copy): Handle multiple lines selection.
	(logview_select_all): New. Add a "Select All" menu item.
	(logview_menus_set_state): Insensitize "Select All" when monitoring.
	Add a separator before the "Find" menu item.

	* log_repaint.c (handle_selection_changed_cb): Allow the selection
	of multiple log lines.

	* logview.c (logview_copy): Add a "copy" menuitem to copy the
	content of the active log line to the clipboard.

2004-11-05  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: Remove a warning.
