@@ -1,3 +1,7 @@
+2004-11-29  Vincent Noel  <vnoel@cox.net>
+
+	* Makefile.am (gnome_system_log_SOURCES): Fixes for make distcheck.
+
 2004-11-24  Vincent Noel  <vnoel@cox.net>
 
 	* userprefs.c: parse_syslog is back from the dead. My mistake,
